--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,16 @@ android {
         versionName "1.0.2"
 
         vectorDrawables.useSupportLibrary = true
+
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
+        packagingOptions {
+            doNotStrip "*/x86/*.so"
+            doNotStrip "*/arm64-v8a/*.so"
+            doNotStrip "*/x86_64/*.so"
+            doNotStrip "armeabi.so"
+        }
     }
     buildTypes {
         release {
@@ -26,4 +36,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:support-vector-drawable:28.0.0"
     implementation "com.android.support:design:28.0.0"
+    implementation files('libs/miit_mdid_1.0.10.aar')
 }
